# toryumon-system

./: .dockerignore  .gitignore  Makefile  README.md  compose.dev.yml  compose.prod.yml  pyproject.toml
.github/: dependabot.yml  labels.yml
.github/workflows/: deploy.yml  sync-template.yml  update-pr-labels.yml
db/: Dockerfile  Makefile  alembic.ini
db/migrations/: env.py
db/migrations/versions/: 20240601014738_3a8b39a14193_add_participants_table.py  20240602110317_c48ef6ba999d_add_progress_tables.py  20240602121211_38cafa5eafd1_fix_fk.py  20240602121542_61cd58709387_fix_fk.py  20240602122229_bc8c6dd266e8_add_ch.py
db/package/: connection.py  models.py  session.py
db/package/crud/: participant.py  progress_ask.py
discord/: Dockerfile  Makefile  bot.py
discord/cogs/: PersonalInfoAcquirer.py  ProgressAsk.py
front/: Dockerfile  Makefile  package.json  vite.config.ts
front/i18n/: babel.config.json  configs.ts
front/src/: main.tsx
nginx/: nginx.conf
nginx/conf.d/: server.dev.conf  server.prod.conf
server/: Dockerfile  Makefile  main.py
server/routers/root/: main.py
