[tool.poetry]
name = "toryumon-system"
version = "0.1.0"
description = "Management system for Toryumon Project"
authors = ["Yuki Watanabe <ukwhatn@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.discord]
optional = true
[tool.poetry.group.discord.dependencies]
sentry-sdk = "2.13.0"
py-cord = "2.6.0"

[tool.poetry.group.dev]
optional = true
[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
mypy = "^1.11.1"
isort = "^5.13.2"
black = "^24.8.0"

[tool.poetry.group.db]
optional = true
[tool.poetry.group.db.dependencies]
sqlalchemy = "^2.0.32"
alembic = "^1.13.2"
psycopg2-binary = "^2.9.9"
pydantic = "^2.9.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"